# The_Bilateral_Solver

./: BilateralGrid.cpp  BilateralSolver.cpp  BilateralSolver.hpp  CMakeLists.txt  ICCG.cpp  ICCG.hpp  new_color.cpp
PythonImplementation/: BilateralGrid.py  test.py
